# TMTPortal

./: .gitignore  README.md
PythonTMTResearch/: AUTOMATION_GUIDE.md  accounts.db  app.py  background_tweet_refresh.py  populate_database.py  pyproject.toml  replit.md  test_finnhub_integration.py
PythonTMTResearch/.streamlit/: secrets.example.toml  secrets.toml
PythonTMTResearch/attached_assets/: Pasted--ULTIMATE-COMPREHENSIVE-TMT-RESEARCH-PORTAL-All-US-Listed-Publicly-Traded-TMT-Companies-Comple-1761760567624_1761760567625.txt
PythonTMTResearch/components/: ai_assistant.py  volatility_screener.py
PythonTMTResearch/data/: tmt_data.py
PythonTMTResearch/db/: db_operations.py  init_db.py  seed_comprehensive_companies.py  seed_tags.py
PythonTMTResearch/integrations/: README.md  TWITTER_SETUP.md  earnings_api.py  gemini_analysis.py  gemini_company_intel.py  news_api.py  setup_twitter_accounts.py  social_news_service.py  stock_prices.py  twitter_scraper.py  volatility_service.py
PythonTMTResearch/scripts/: refresh_data.py
PythonTMTResearch/utils/: secret_helper.py  web_scraper.py
PythonTMTResearch/views/: companies.py  company_detail.py  earnings.py  news.py  roundtable.py  search.py  social_news.py  unified_news.py
